[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "galstreams"
authors = [
  { name = "C. Mateu", email = "cmateu@fcien.edu.uy" }
]
description = "MW stream library toolkit"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = ["numpy", "scipy", "astropy"]

[project.optional-dependencies]
# test = [
#   "pytest >=6",
#   "pytest-cov >=3",
#   "pytest-astropy",
# ]

[project.urls]
Homepage = "https://github.com/cmateu/galstreams"
"Bug Tracker" = "https://github.com/cmateu/galstreams/issues"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "galstreams/_version.py"

[tool.hatch.env.default]
features = ["test"]
scripts.test = "pytest {args}"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra", "--showlocals", "--strict-markers", "--strict-config", "--ignore-glob=*_mpi*"
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:unclosed file:ResourceWarning",
  "ignore:unclosed <socket:ResourceWarning",
  "ignore:unclosed <ssl.SSLSocket:ResourceWarning",
]
log_cli_level = "INFO"
# testpaths = [
#   "tests",
# ]
